[gd_scene load_steps=6 format=3 uid="uid://m4vgho7mtbbr"]

[ext_resource type="Script" uid="uid://mk15w4gad1mb" path="res://Componentes/Menu_etc/main_menu.gd" id="1_4hclx"]
[ext_resource type="PackedScene" uid="uid://cjficjjbp1gjq" path="res://Componentes/Menu_etc/credits.tscn" id="2_ib78o"]
[ext_resource type="PackedScene" uid="uid://bqawtwe2n84sn" path="res://Cenas/Area_1.tscn" id="3_3hc65"]
[ext_resource type="FontFile" uid="uid://ccsmg6cvju8n6" path="res://SpriteSheets/Fonte1.png" id="4_3hc65"]
[ext_resource type="AudioStream" uid="uid://in1bt4bdu5p8" path="res://Audio/BGM/NES/01 Credit.wav" id="4_ai6wg"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4hclx")
credits_scene = ExtResource("2_ib78o")
Area1_scene = ExtResource("3_3hc65")
Somvfx = ExtResource("4_ai6wg")

[node name="UIContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ButtonsContainer" type="MarginContainer" parent="UIContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="Control" type="Control" parent="UIContainer/ButtonsContainer"]
layout_mode = 2
mouse_filter = 2

[node name="BoxContainer" type="BoxContainer" parent="UIContainer/ButtonsContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.5
offset_top = -96.0
offset_right = 59.5
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 18
alignment = 1
vertical = true

[node name="GameStartButton" type="Button" parent="UIContainer/ButtonsContainer/Control/BoxContainer"]
z_index = 3
layout_mode = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("4_3hc65")
theme_override_font_sizes/font_size = 10
text = "GAME START"

[node name="OptionsButton" type="Button" parent="UIContainer/ButtonsContainer/Control/BoxContainer"]
z_index = 3
layout_mode = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("4_3hc65")
theme_override_font_sizes/font_size = 10
text = "OPTIONS"

[node name="CreditsButton" type="Button" parent="UIContainer/ButtonsContainer/Control/BoxContainer"]
z_index = 3
layout_mode = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("4_3hc65")
theme_override_font_sizes/font_size = 10
text = "CREDITS"

[node name="ExitButton" type="Button" parent="UIContainer/ButtonsContainer/Control/BoxContainer"]
z_index = 3
layout_mode = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("4_3hc65")
theme_override_font_sizes/font_size = 10
text = "EXIT GAME"

[node name="OptionsContainer" type="MarginContainer" parent="UIContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2

[node name="HTabsContainer" type="HBoxContainer" parent="UIContainer/OptionsContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="TabContainer" type="TabContainer" parent="UIContainer/OptionsContainer/HTabsContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_fonts/font = ExtResource("4_3hc65")
theme_override_font_sizes/font_size = 10
tab_alignment = 1
current_tab = 0

[node name="SOUND" type="MarginContainer" parent="UIContainer/OptionsContainer/HTabsContainer/TabContainer"]
layout_mode = 2
mouse_filter = 2
metadata/_tab_index = 0

[node name="Control" type="Control" parent="UIContainer/OptionsContainer/HTabsContainer/TabContainer/SOUND"]
layout_mode = 2
mouse_filter = 2

[node name="FlowContainer" type="FlowContainer" parent="UIContainer/OptionsContainer/HTabsContainer/TabContainer/SOUND/Control"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -76.0
offset_right = 140.0
offset_bottom = 133.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
mouse_filter = 2
theme_override_constants/v_separation = 50

[node name="MasterSoundSlider" type="HSlider" parent="UIContainer/OptionsContainer/HTabsContainer/TabContainer/SOUND/Control/FlowContainer"]
z_index = 3
custom_minimum_size = Vector2(150, 35)
layout_mode = 2
step = 0.05
value = 100.0

[node name="BGMSlider" type="HSlider" parent="UIContainer/OptionsContainer/HTabsContainer/TabContainer/SOUND/Control/FlowContainer"]
custom_minimum_size = Vector2(150, 35)
layout_mode = 2
step = 0.05
value = 50.0

[node name="SFXSlider" type="HSlider" parent="UIContainer/OptionsContainer/HTabsContainer/TabContainer/SOUND/Control/FlowContainer"]
custom_minimum_size = Vector2(150, 35)
layout_mode = 2
step = 0.05
value = 100.0

[node name="VLabelsContainer" type="VBoxContainer" parent="UIContainer/OptionsContainer/HTabsContainer/TabContainer/SOUND/Control"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -70.0
offset_right = -44.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 41

[node name="Label" type="Label" parent="UIContainer/OptionsContainer/HTabsContainer/TabContainer/SOUND/Control/VLabelsContainer"]
layout_mode = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("4_3hc65")
theme_override_font_sizes/font_size = 10
text = "MASTER"

[node name="Label2" type="Label" parent="UIContainer/OptionsContainer/HTabsContainer/TabContainer/SOUND/Control/VLabelsContainer"]
layout_mode = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("4_3hc65")
theme_override_font_sizes/font_size = 10
text = "MUSIC"

[node name="Label3" type="Label" parent="UIContainer/OptionsContainer/HTabsContainer/TabContainer/SOUND/Control/VLabelsContainer"]
layout_mode = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("4_3hc65")
theme_override_font_sizes/font_size = 10
text = "SFX"

[node name="BackButton" type="Button" parent="UIContainer/OptionsContainer/HTabsContainer/TabContainer/SOUND/Control"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.97
anchor_right = 0.03
anchor_bottom = 0.97
offset_left = 0.28
offset_top = -18.86
offset_right = 40.28
offset_bottom = -0.860001
grow_vertical = 0
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("4_3hc65")
theme_override_font_sizes/font_size = 10
text = "BACK"

[node name="DifficultyContainer" type="MarginContainer" parent="UIContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2

[node name="Control" type="Control" parent="UIContainer/DifficultyContainer"]
layout_mode = 2
mouse_filter = 2

[node name="BackButtonDifficulty" type="Button" parent="UIContainer/DifficultyContainer/Control"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.97
anchor_right = 0.03
anchor_bottom = 0.97
offset_left = 0.28
offset_top = -19.32
offset_right = 40.28
offset_bottom = -1.32001
grow_vertical = 0
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("4_3hc65")
theme_override_font_sizes/font_size = 10
text = "BACK"

[node name="BoxContainer" type="BoxContainer" parent="UIContainer/DifficultyContainer/Control"]
layout_mode = 2
offset_left = 51.0
offset_top = 46.0
offset_right = 181.0
offset_bottom = 217.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
vertical = true

[node name="2 players" type="Button" parent="UIContainer/DifficultyContainer/Control/BoxContainer"]
visible = false
z_index = 3
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("4_3hc65")
theme_override_font_sizes/font_size = 10
text = "2 PLAYERS"

[node name="EasyButton" type="Button" parent="UIContainer/DifficultyContainer/Control/BoxContainer"]
visible = false
z_index = 3
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("4_3hc65")
theme_override_font_sizes/font_size = 10
text = "EASY"

[node name="ImpossivelButton" type="Button" parent="UIContainer/DifficultyContainer/Control/BoxContainer"]
z_index = 3
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("4_3hc65")
theme_override_font_sizes/font_size = 10
text = "NORMAL"

[connection signal="pressed" from="UIContainer/ButtonsContainer/Control/BoxContainer/GameStartButton" to="." method="_on_game_start_button_pressed"]
[connection signal="pressed" from="UIContainer/ButtonsContainer/Control/BoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="UIContainer/ButtonsContainer/Control/BoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="UIContainer/ButtonsContainer/Control/BoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="drag_ended" from="UIContainer/OptionsContainer/HTabsContainer/TabContainer/SOUND/Control/FlowContainer/MasterSoundSlider" to="." method="_on_master_sound_slider_drag_ended"]
[connection signal="value_changed" from="UIContainer/OptionsContainer/HTabsContainer/TabContainer/SOUND/Control/FlowContainer/MasterSoundSlider" to="." method="_on_master_sound_slider_value_changed"]
[connection signal="drag_ended" from="UIContainer/OptionsContainer/HTabsContainer/TabContainer/SOUND/Control/FlowContainer/BGMSlider" to="." method="_on_bgm_slider_drag_ended"]
[connection signal="value_changed" from="UIContainer/OptionsContainer/HTabsContainer/TabContainer/SOUND/Control/FlowContainer/BGMSlider" to="." method="_on_bgm_slider_value_changed"]
[connection signal="drag_ended" from="UIContainer/OptionsContainer/HTabsContainer/TabContainer/SOUND/Control/FlowContainer/SFXSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="value_changed" from="UIContainer/OptionsContainer/HTabsContainer/TabContainer/SOUND/Control/FlowContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="UIContainer/OptionsContainer/HTabsContainer/TabContainer/SOUND/Control/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="UIContainer/DifficultyContainer/Control/BackButtonDifficulty" to="." method="_on_back_button_difficulty_pressed"]
[connection signal="pressed" from="UIContainer/DifficultyContainer/Control/BoxContainer/2 players" to="." method="_on__players_pressed"]
[connection signal="pressed" from="UIContainer/DifficultyContainer/Control/BoxContainer/EasyButton" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="UIContainer/DifficultyContainer/Control/BoxContainer/ImpossivelButton" to="." method="_on_impossivel_button_pressed"]
